frontend/src/assets/style.css
@tailwind base;

@layer base {
  html {
    @apply bg-gray-dark;
  }

  #root {
    @apply container mx-auto max-w-xl min-h-screen;
    @apply bg-gradient-to-b from-gray-darker to-[#433c3f] bg-cover bg-center;
    @apply text-text-light;
    @apply break-keep;
  }
}

@tailwind components;

@layer components {
  .vh-center {
    @apply flex items-center justify-center;
  }
  .modal-wrapper {
    @apply relative z-10 text-text-light;
  }
  .modal-backdrop {
    @apply fixed inset-0 bg-black bg-opacity-50;
    @apply transition-opacity;
  }
  .modal-panel-wrapper {
    @apply fixed inset-0 z-10 overflow-y-auto;
    @apply flex min-h-full justify-center p-4 items-center sm:p-0;
  }
  .modal-panel {
    @apply relative container mx-auto max-w-xl h-screen text-text-light;
    @apply px-4 pt-4 pb-6 overflow-hidden;
    @apply rounded-lg shadow-lg;
    @apply bg-gradient-to-b from-[#484649] to-[#433c3f] bg-cover bg-center;
    @apply transform transition-all;
  }
  .section {
    @apply mb-16;
  }
  .section.small {
    @apply mb-8;
  }
  .section-title {
    @apply text-2xl mb-4 text-text-light;
  }
  .link {
    @apply underline text-primary hover:text-primary-light;
  }
  .button {
    @apply text-lg py-2 px-4 font-semibold rounded inline-flex items-center justify-center select-none;
  }
  .button.primary {
    @apply bg-primary hover:bg-primary-dark text-gray-darker;
  }
  .button.secondary {
    @apply text-primary hover:text-primary-dark border border-primary hover:border-primary-dark;
  }
  .button.small {
    @apply text-sm py-1 px-3;
  }
  .button.medium {
    @apply text-lg py-2 px-4;
  }
  .button.large {
    @apply text-xl py-3 px-6;
  }
  .button.link {
    @apply border-none py-2 px-2;
  }
  .button.link span {
    @apply underline;
  }
  .badge {
    @apply items-center mt-1 px-2 py-1 bg-gray-dark rounded-full text-xs text-text-light;
  }
  .user-indicator {
    @apply bottom-0 right-0 absolute border-2 border-white rounded-full;
  }
  .duotone-image {
    @apply bg-gray-light p-0 flex flex-1 basis-full overflow-hidden relative h-full;
  }
  .duotone-image img {
    @apply w-full h-full max-w-full relative object-cover;
    @apply flex-grow flex-shrink-0 basis-full;
    @apply grayscale contrast-125 mix-blend-multiply;
  }
  .duotone-image::before {
    @apply bg-[#4BA19D]/50 inset-0 h-full w-full absolute z-10 mix-blend-lighten content-[''];
  }
  .smooth-image {
    animation: 3s ease 0s normal forwards 1 fadein;
  }
  @keyframes fadein {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
}

@tailwind utilities;

